package animals;

message Dog {
  required string _id = 1;
  required string dogName = 2;
  required animals.Breed breed = 3;
}

message Breed {
  required string _id = 1;
  required string name = 2;
  optional int32 popCount = 3;
}
